Fixes visible scrollbar issue on user login gate

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/hunt/gate.css
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/hunt/gate.css
@@ -207,6 +207,10 @@ body.html {
 #dosomething-login-login-popup-form .already-member {
   display: none; }
 
+#dosomething-login-login-popup-form {
+  overflow: hidden;
+}
+
 @media only screen and (max-width: 550px) {
   div[aria-labelledby="ui-dialog-title-dosomething-login-login-popup-form"] {
     width: 100% !important; } }
